--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Change log for batou
 ====================
 
+0.2 (unreleased)
+================
+
+- Nothing changed yet.
+
+
 0.1p1 (2012-04-02)
 ==================
 
