--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Change log for batou
 ====================
 
+0.1.2 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.1.1 (2012-04-02)
 ==================
 
