--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Change log for batou
 ====================
 
+0.1.3 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.1.2 (2012-04-12)
 ==================
 
