--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ Change log for batou
 0.1.3 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Leave umask alone. If it must be set for service deployment, we'd better
+  resort to .bashrc or similar.
 
 
 0.1.2 (2012-04-12)
