--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,6 @@
-====================
-Change log for batou
-====================
+=========
+Changelog
+=========
 
 0.1 (unreleased)
 ================
