--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ Change log for batou
 0.1.4 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Always use a fixed locale of en_US.utf8 so that output from external commands
+  remains predictable (RT 86245).
 
 
 0.1.3 (2012-10-15)
