Back to development: 0.1.5

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Change log for batou
 ====================
 
+0.1.5 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.1.4 (2013-02-07)
 ==================
 
