--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,9 @@ Changelog
   development machine. Event listeners were not formatting the event list
   correctly.
 
+- Let RunningSupervisor wait (infinitely) long when reloading if the
+  supervisorctl command returns 'SHUTDOWN_STATE'. This supports large
+  installations with many services more gracefully but might get stuck.
 
 0.2 (2013-04-18)
 ================
