--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.2.3 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.2.2 (2013-04-19)
 ==================
 
