--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 0.2.4 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Force reread/update on supervisor after config changes.
 
 
 0.2.3 (2013-04-22)
