--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.2.6 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.2.5 (2013-04-23)
 ==================
 
