--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ Change log for batou
 0.1.5 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Speed up deployments by improving the logic if bootstraps are required. Now
+  bootstrap is left out if not required in most cases.
 
 
 0.1.4 (2013-02-07)
