--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Change log for batou
 ====================
 
+0.1.6 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.1.5 (2013-04-24)
 ==================
 
