--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Changelog
 ==================
 
 - Add component that clones from a Mercurial repository.
+- Write supervisord.pid into /run/local instead of ${workdir}/var to ensure
+  correct startup after machine crashes.
 
 
 0.2.5 (2013-04-23)
