--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.2.8 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.2.7 (2013-05-22)
 ==================
 
