--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.2.9 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.2.8 (2013-06-18)
 ==================
 
