--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b2 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.0b1 (2013-07-09)
 ==================
 
