--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ Changelog
 
 - Allow remote deployments from root of repository.
 
+- Make PIP management more robust.
 
 1.0b2 (2013-07-09)
 ==================
