--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changelog
 1.0b4 (unreleased)
 ==================
 
+- Consistently switch to using setuptools.
+
 - Fix #12399: incorrect stat attributes for Owner and Group
 
 
