Back to development: 0.2.11

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.2.11 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 0.2.10 (2013-07-15)
 ===================
 
