--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 0.2.11 (unreleased)
 ===================
 
-- Nothing changed yet.
+- Silence verification command for virtualenv pkg_resources availability.
 
 
 0.2.10 (2013-07-15)
