--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.2.12 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 0.2.11 (2013-07-25)
 ===================
 
