Back to development: 0.2.14

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.2.14 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 0.2.13 (2013-08-01)
 ===================
 
