--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Change log for batou
 ====================
 
+0.1.7 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 0.1.6 (2013-08-09)
 ==================
 
