Don't use `bin/buildout bootstrap` command anymore.
PIP installs a sufficient `bin/buildout` so buildout can do the rest
internally.
(grafted from e3103701fd5b97091fae36ad916ed39e6c50ab8b)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,14 @@ Changelog
 1.0b4 (unreleased)
 ==================
 
+
 - Fix Python package installtion version check.
+
+- Don't use `bin/buildout bootstrap` command anymore. PIP installs a sufficient
+  `bin/buildout` so buildout can do the rest internally.
+
+- Install zc.buildout during bootstrapping phase using PIP to avoid
+  bootstrap.py problems.
 
 - Shorten URLs in the Build component to their basename.
 
