--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,8 @@ Changelog
 1.0b4 (unreleased)
 ==================
 
+- Fix #12679: make timeouts configurable.
+
 - Removed re-imports from batou main module to support light-weight
   self-installation and bootstrapping. I.e. 'from batou import Component' no
   longer works.
