--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ Changelog
 1.0b8 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Make ``batou init`` print that it's working. Bootstrapping can take a while,
+  so at least signal that something's going on.
 
 
 1.0b7 (2013-08-17)
