--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b9 (unreleased)
+==================
+
+- Nothing changed yet.
+
+
 1.0b8 (2013-08-17)
 ==================
 
