--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+0.2.16 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 0.2.15 (2013-08-21)
 ===================
 
