--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b10 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b9 (2013-08-22)
 ==================
 
