Back to development: 1.0b11

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b11 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b10 (2013-09-27)
 ===================
 
