Allow specifying acceptable return codes in the cmd API.
Use in hg instrumentation where sometimes successful but empty operations return '1' instead of '0'.

Fixes #12910

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,9 @@ Changelog
 1.0b11 (unreleased)
 ===================
 
+- #12910: Remote deployments failed when using bundles for transfers if no
+  changes needed bundling.
+
 - #12766: Allow bootstrapping a batou project in an existing directory to
   support migration from 0.2.
 
