--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,10 @@ Changelog
 1.0b11 (unreleased)
 ===================
 
+- #12897: Use non-SSL pypi mirror for downloading virtualenv to fix tests
+  failing randomly on machines that (for some reason) can't validate PyPI's
+  certificate.
+
 - #12911: Ensure that we can configure file owners when they don't 
   exist during configure phase yet.
 
