--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b12 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b11 (2013-10-17)
 ===================
 
