Back to development: 1.0b13

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b13 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b12 (2013-11-04)
 ===================
 
