Fixes #12986: Only try to unbundle if there actually are changes to unbundle

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,8 @@ Changelog
 - Load components in alphabetical order. This enables importing from other
   components (when naming the directories appropriately).
 
+- #12986: Only try to unbundle if there actually are changes to unbundle. 
+
 - Added some documentation.
 
 
