--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b14 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b13 (2013-11-19)
 ===================
 
