--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,10 @@ Changelog
 1.0b15 (unreleased)
 ===================
 
+- Refactor Python virtualenv and package management. Provide explicit knowledge
+  about Python versions 2.4, 2.5, 2.6, 2.7, 3.1, 3.2, and 3.3 to use compatible
+  virtualenv/pip/setuptools versions and commands. Fixes #12941
+
 - Support multiple crontabs by making ``key`` and ``filename`` configurable
   for the ``cron.CronTab`` component.
 
