--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b16 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b15 (2013-11-29)
 ===================
 
