--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,8 +5,8 @@ Changelog
 1.0b16 (unreleased)
 ===================
 
-- Nothing changed yet.
-
+- Improve the bootstrap/upgrade fix for #13049: the bootstrap template needed a
+  second improvement.
 
 1.0b15 (2013-11-29)
 ===================
