--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b18 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b17 (2013-12-06)
 ===================
 
