Recognize ``.tar.xz`` files and extract them with ``tar``

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,8 @@ Changelog
 - Mercurial clone: allow updates to reset uncommitted changes to a clone
   unconditionally (unless configured not to update clones in the first place).
 
+- Archive: recognize ``.tar.xz`` files and extract them with ``tar``.
+
 - Added documentation.
 
 
