Fixes #13145: Look for the stamp files in the right path
I think this bug came about due to some internal Component API change,
since previously the ``with self.chdir`` probably worked fine.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,9 @@ Changelog
 
 - Archive: recognize ``.tar.xz`` files and extract them with ``tar``.
 
+- Fix bug in CMMI verify that would always raise UpdateNeeded due to a path
+  mismatch (#13145).
+
 
 1.0b17 (2013-12-06)
 ===================
