--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b19 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b18 (2014-03-31)
 ===================
 
