Back to development: 1.0b20

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b20 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b19 (2014-04-07)
 ===================
 
