Back to development: 1.0b21

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b21 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b20 (2014-05-13)
 ===================
 
