--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b22 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b21 (2014-06-30)
 ===================
 
