Compare the encoded versions during verify; there's no need to decode, and it was asymmetric (thus, wrong) anyway
only one of the two comparison elements was decoded to unicode, so
there's no wonder that caused UnicodeWarnings.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -29,6 +29,9 @@ Changelog
 - Make supervisor restart/reload more robust towards non-running supervisors
   with lying PID files. Fixes #12744.
 
+- Remove harmful decoding step in File verify that caused wrong results.
+
+
 1.0b23 (2014-06-30)
 ===================
 
