Also get rid of --batch for gpg.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,8 +5,8 @@ Changelog
 1.0b25 (unreleased)
 ===================
 
-- Improve gpg handling: don't do '--no-tty' any longer as we actually only run
-  the gpg code in terminal environments usually.
+- Improve gpg handling: don't do --no-tty or --batch any longer as we actually
+  only run the gpg code in (local) terminal environments usually.
 
 1.0b24 (2014-07-04)
 ===================
