Back to development: 1.0b26

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b26 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b25 (2014-07-31)
 ===================
 
