Back to development: 1.0b27

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b27 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b26 (2014-08-05)
 ===================
 
