Back to development: 1.0b29

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b29 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b28 (2014-10-10)
 ===================
 
