Back to development: 1.0b31

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b31 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b30 (2015-01-09)
 ===================
 
