Back to development: 1.0b32

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b32 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b31 (2015-01-16)
 ===================
 
