Back to development: 1.0b34

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.0b34 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 1.0b33 (2015-01-28)
 ===================
 
